src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual_Response_Rate__c</fullName>
        <formula>NumberOfWonOpportunities  /  NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Response Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Add_New_Mailing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you have an email_signup webpage set up so people can sign up for this campaign, then this checkbox controls whether or not the campaign name is added to the contact or lead&apos;s Mailing_Lists field.  Generally, we recommend NOT adding it, so that the mailing_lists field doesn&apos;t become too cumbersome.</description>
        <inlineHelpText>If you have an email_signup webpage set up so people can sign up for this campaign, then this checkbox controls whether or not the campaign name is added to the contact or lead&apos;s Mailing_Lists field.  Add it only if you need it.</inlineHelpText>
        <label>Add New Mailing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllGroupMmbrsRegister__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is selected, if a group leader registers a group for an event, then the group leader receives an email with a special link and all group members must register using that link, which shows them a registration page with the name of the event AND the name of the group.</description>
        <inlineHelpText>If this box is selected, if a group leader registers a group for an event, then the group leader receives an email with a special link and all group members must register using that link, which shows them a registration page with the name of the event AND</inlineHelpText>
        <label>AllGroupMmbrsRegister</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Group_Signup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should a registrant be allowed to sign up more people than just themselves?</description>
        <inlineHelpText>Should a registrant be allowed to sign up more people than just themselves?</inlineHelpText>
        <label>Allow_Group_Signup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Webpage__c</fullName>
        <description>The webpage for this campaign, if there is one.  Useful for returning people to the campaign after they sign up for it.</description>
        <inlineHelpText>The webpage for this campaign, if there is one.  Useful for returning people to the campaign after they sign up for it.</inlineHelpText>
        <label>Campaign_Webpage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Maximum number of participants for an event or activity.</description>
        <inlineHelpText>Maximum number of participants for an event or activity.</inlineHelpText>
        <label>Capacity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletionURL__c</fullName>
        <description>If this is filled in, after the signup routine is over, the user will see the page at the CompletionURL.  Useful for directing users to the donation or petition page.</description>
        <inlineHelpText>If this is filled in, after the signup routine is over, the user will see the page at the CompletionURL.  Useful for directing users to the donation or petition page.</inlineHelpText>
        <label>CompletionURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Signup_Question_2__c</fullName>
        <label>Custom Signup Question 2</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Signup_Question__c</fullName>
        <label>Custom Signup Question</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <description>For longer description of events.</description>
        <inlineHelpText>For longer description of events.</inlineHelpText>
        <label>Description_Long</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_Calculated__c</fullName>
        <formula>Expected_Avg_Contribution__c  *  ExpectedResponse  *  NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Revenue (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Cost__c</fullName>
        <label>Event_Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <label>Event_Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_End_Time__c</fullName>
        <label>Event End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event_Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Avg_Contribution__c</fullName>
        <description>What you expect the average contribution to be for this activity.  (ie. You think the average donation at a fundraising dinner will be about $50.)</description>
        <inlineHelpText>What you expect the average contribution to be for this activity.  (ie. You think the average donation at a fundraising dinner will be about $50.)</inlineHelpText>
        <label>Expected Avg Contribution</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FollowOnEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FollowOnEvent</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>FollowOnEvent_for</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>Numeric campaign goal</description>
        <inlineHelpText>Numeric campaign goal</inlineHelpText>
        <label>Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Host is the person who invited speakers for the event</description>
        <label>Host</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Host Campaigns</relationshipLabel>
        <relationshipName>HostCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>122</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The master campaign of which this Activity is a part.</description>
        <inlineHelpText>The master campaign of which this Activity is a part.  (This campaign activity may also be a &quot;parent&quot; and have &quot;child&quot; sub-activities.)</inlineHelpText>
        <label>Master Campaign</label>
        <referenceTo>Master_Campaign__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>R00N700000029c5KEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NrHoursToAssign__c</fullName>
        <description>The default number of volunteer hours to assign to everyone at this event.</description>
        <inlineHelpText>The default number of volunteer hours to assign to everyone at this event.</inlineHelpText>
        <label>NrHoursToAssign</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price of a service, such as a workshop, or support.</description>
        <inlineHelpText>Price of a service, such as a workshop, or support.  NOT a donation or membership.</inlineHelpText>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Register_Template__c</fullName>
        <description>Name of the template used for online signup for a campaign.</description>
        <inlineHelpText>Name of the template used for online signup for a campaign.</inlineHelpText>
        <label>Register_Template</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequireAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, the Email_Signup_for_Campaign page will require users to fill in their full address and phone.</description>
        <inlineHelpText>If this box is checked, the Email_Signup_for_Campaign page will require users to fill in their full address and phone.</inlineHelpText>
        <label>RequireAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select_Template__c</fullName>
        <description>Template used for the online registration form for this campaign.  If this is specified, you don&apos;t need to choose a register_template - that will be chosen by the select_template.</description>
        <inlineHelpText>Template used for the online registration form for this campaign.  If this is specified, you don&apos;t need to choose a register_template - that will be chosen by the select_template.</inlineHelpText>
        <label>Select_Template</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Questions__c</fullName>
        <description>Choose the questions you wish to appear on the volunteer_signup page.</description>
        <inlineHelpText>Choose the questions you wish to appear on the volunteer_signup page.</inlineHelpText>
        <label>Signup_Questions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adults in group</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Boat</fullName>
                </value>
                <value>
                    <fullName>Carpool</fullName>
                </value>
                <value>
                    <fullName>Nr_in_Group</fullName>
                </value>
                <value>
                    <fullName>Pref_Location</fullName>
                </value>
                <value>
                    <fullName>Shirt_Size</fullName>
                </value>
                <value>
                    <fullName>Special_Needs</fullName>
                </value>
                <value>
                    <fullName>Teammates</fullName>
                </value>
                <value>
                    <fullName>Waders</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Dietary_Restrictions</fullName>
                </value>
                <value>
                    <fullName>Require Emergency Contact Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signup_Template__c</fullName>
        <label>Signup Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training_signup_standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signup_for_Group__c</fullName>
        <description>Should the volunteer signup form reveal the fields that allow one person to sign up for a group?</description>
        <inlineHelpText>Should the volunteer signup form reveal the fields that allow one person to sign up for a group?</inlineHelpText>
        <label>Signup_for_Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yourself only</fullName>
                </value>
                <value>
                    <fullName>Yourself and family members</fullName>
                </value>
                <value>
                    <fullName>A group from a business or corporation</fullName>
                </value>
                <value>
                    <fullName>Another type of group, like family and friends or a  church</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slots_Remaining__c</fullName>
        <formula>Capacity__c -  Slots_Reserved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slots Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slots_Reserved__c</fullName>
        <label>Slots_Reserved</label>
        <summarizedField>CampaignMember.Nr_in_Group__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Waiver_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Waiver</label>
        <referenceTo>Text_Document__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaign Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Fundraising_Activity</fullName>
        <active>true</active>
        <description>Fundraising Campaign Activity (Can have sub-activities, like Renewal Letters.)</description>
        <label>Fundraising Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Good_or_Service</fullName>
        <active>true</active>
        <description>Good or service you provide for a fee, like a workshop or t-shirt</description>
        <label>Good or Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outreach_Campaign</fullName>
        <active>true</active>
        <label>Outreach_Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Event</fullName>
        <active>true</active>
        <label>Public Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Signup</fullName>
        <active>true</active>
        <description>Campaign to sign individuals up</description>
        <label>Signup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Event</fullName>
        <active>true</active>
        <label>Volunteer Event</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>